--- a/thesis.tex
+++ b/thesis.tex
@@ -51,6 +51,7 @@ process all files:}
 % \include{signature}
 \pagestyle{plain}
 \include{front/toc}
+\include{chaps/preface}
 \include{chaps/chap1}
 % \include{chaps/chap2}
 \appendix
