--- a/biblio/biblio.tex
+++ b/biblio/biblio.tex
@@ -3,6 +3,5 @@
 %% this file to a `thebibliography' environment.  For more information 
 %% see section 4.3 of the LaTeX manual.
 \begin{singlespace}
-\bibliography{thesis}
-\bibliographystyle{plain}
+\printbibliography
 \end{singlespace}
