--- a/thesis.tex
+++ b/thesis.tex
@@ -31,6 +31,8 @@
 %% some PDF conversions mess up the ligatures.  -LB, 1/22/2014
 \usepackage{cmap}
 \usepackage[T1]{fontenc}
+\usepackage[backend=bibtex]{biblatex}
+\addbibresource{thesis.bib}
 \pagestyle{plain}
 
 %% This bit allows you to either specify only the files which you wish to
@@ -52,7 +54,7 @@ process all files:}
 \pagestyle{plain}
 \include{front/toc}
 \include{chaps/preface}
-\include{chaps/chap1}
+\include{chaps/intro}
 % \include{chaps/chap2}
 \appendix
 % \include{appends/appa}
