--- a/thesis.tex
+++ b/thesis.tex
@@ -55,6 +55,7 @@ process all files:}
 \include{front/toc}
 \include{chaps/preface}
 \include{chaps/intro}
+\include{chaps/chap1}
 % \include{chaps/chap2}
 \appendix
 % \include{appends/appa}
