--- a/thesis.tex
+++ b/thesis.tex
@@ -31,7 +31,7 @@
 %% some PDF conversions mess up the ligatures.  -LB, 1/22/2014
 \usepackage{cmap}
 \usepackage[T1]{fontenc}
-\usepackage[backend=bibtex]{biblatex}
+\usepackage[notes, hyperref=true, doi=false, isbn=false, citereset=chapter, bibencoding=utf8, backend=biber]{biblatex-chicago}
 \addbibresource{thesis.bib}
 \pagestyle{plain}
 
