--- a/thesis.tex
+++ b/thesis.tex
@@ -56,7 +56,7 @@ process all files:}
 \include{chaps/preface}
 \include{chaps/intro}
 \include{chaps/chap1}
-% \include{chaps/chap2}
+\include{chaps/chap2}
 \appendix
 % \include{appends/appa}
 % \include{appends/appb}
