--- a/front/cover.tex
+++ b/front/cover.tex
@@ -45,7 +45,7 @@
 % however the specifications can change.  We recommend that you verify the
 % layout of your title page with your thesis advisor and/or the MIT 
 % Libraries before printing your final copy.
-\title{The Missing Links: Aggregating History and the Order of Data}
+\title{The Missing Links: Archiving News and Filtering History}
 
 \author{Liam Phalen Andrew}
 % If you wish to list your previous degrees on the cover page, use the 
