--- a/thesis.tex
+++ b/thesis.tex
@@ -57,6 +57,9 @@ process all files:}
 \include{chaps/intro}
 \include{chaps/chap1}
 \include{chaps/chap2}
+\include{chaps/chap3}
+\include{chaps/chap4}
+\include{chaps/conc}
 \appendix
 % \include{appends/appa}
 % \include{appends/appb}
