Lots of work on chapter 3

--- a/thesis.tex
+++ b/thesis.tex
@@ -32,6 +32,7 @@
 \usepackage{cmap}
 \usepackage[T1]{fontenc}
 \usepackage[notes, hyperref=true, doi=false, isbn=false, citereset=chapter, bibencoding=utf8, backend=biber]{biblatex-chicago}
+\usepackage[autostyle]{csquotes}
 \addbibresource{thesis.bib}
 \pagestyle{plain}
 
@@ -46,20 +47,20 @@ process all files:}
 
 \begin{document}
 
-\include{front/cover}
+%\include{front/cover}
 % Some departments (e.g. 5) require an additional signature page.  See
 % signature.tex for more information and uncomment the following line if
 % applicable.
 % \include{signature}
 \pagestyle{plain}
-\include{front/toc}
-\include{chaps/preface}
-\include{chaps/intro}
-\include{chaps/chap1}
-\include{chaps/chap2}
+% \include{front/toc}
+% \include{chaps/preface}
+% \include{chaps/intro}
+% \include{chaps/chap1}
+% \include{chaps/chap2}
 \include{chaps/chap3}
-\include{chaps/chap4}
-\include{chaps/conc}
+% \include{chaps/chap4}
+% \include{chaps/conc}
 \appendix
 % \include{appends/appa}
 % \include{appends/appb}
