--- a/thesis.tex
+++ b/thesis.tex
@@ -47,20 +47,20 @@ process all files:}
 
 \begin{document}
 
-%\include{front/cover}
+\include{front/cover}
 % Some departments (e.g. 5) require an additional signature page.  See
 % signature.tex for more information and uncomment the following line if
 % applicable.
 % \include{signature}
 \pagestyle{plain}
-% \include{front/toc}
-% \include{chaps/preface}
-% \include{chaps/intro}
-% \include{chaps/chap1}
-% \include{chaps/chap2}
+\include{front/toc}
+\include{chaps/preface}
+\include{chaps/intro}
+\include{chaps/chap1}
+\include{chaps/chap2}
 \include{chaps/chap3}
-% \include{chaps/chap4}
-% \include{chaps/conc}
+\include{chaps/chap4}
+\include{chaps/conc}
 \appendix
 % \include{appends/appa}
 % \include{appends/appb}
