--- a/thesis.bib
+++ b/thesis.bib
@@ -3,7 +3,6 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
-
 @online{_algorithms_????,
 	title = {The Algorithms at the Heart of the New September 11 Memorial Museum},
 	url = {http://gizmodo.com/the-algorithm-at-the-heart-of-the-new-september-11-memo-1576067926},
@@ -281,6 +280,17 @@
 	langid = {english},
 	keywords = {Internet, journalism, journalistic skills, online journalism, World Wide Web},
 	file = {405804.pdf:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/GPAK968D/405804.pdf:application/pdf;Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/IZN3X9IK/373.html:text/html}
+}
+
+@online{draper_46_2014,
+	title = {46 Times Vox Totally Fucked Up A Story},
+	url = {http://theconcourse.deadspin.com/46-times-vox-totally-fucked-up-a-story-1673835447},
+	abstract = {If you work in the media, you're going to get things wrong. Accuracy and timeliness are in conflict, and when you're dealing with vast amounts of information, accuracy will sometimes suffer. No one is happy about this, but it's how it is, and this is the tradeoff you implicitly accept when reading news. If you are intolerant of error, prepare to wait months for deeply-researched pieces (which of course carry no guarantee of error-free reporting). Deadspin, it should go without saying, is hardly immune from this: here is an apology for a story we completely botched, and here is a post that I personally got 100\% wrong.},
+	titleaddon = {The Concourse},
+	author = {Draper, Kevin},
+	urldate = {2015-03-15},
+	date = {2014-12-30},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/HJRH2QCH/46-times-vox-totally-fucked-up-a-story-1673835447.html:text/html}
 }
 
 @online{_arcades_????,
@@ -728,12 +738,14 @@
 	file = {JSTOR Full Text PDF:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/J2GT8DCV/Nesmith - 2002 - Seeing Archives Postmodernism and the Changing In.pdf:application/pdf}
 }
 
-@online{_refreshing_????,
+@online{yglesias_refreshing_2015,
 	title = {Refreshing the evergreen},
 	url = {http://www.vox.com/2015/1/15/7546877/evergreen-experiment},
 	abstract = {How and why we're trying to find a better way to use our past work.},
 	titleaddon = {Vox},
+	author = {Yglesias, Matthew},
 	urldate = {2015-02-04},
+	date = {2015-01-15},
 	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/D6TIAD8M/evergreen-experiment.html:text/html}
 }
 
@@ -1057,6 +1069,22 @@
 	file = {Full Text PDF:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/F7P3JP7U/Deuze - 2003 - The Web and its Journalisms Considering the Conse.pdf:application/pdf;Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/Q78BRFDG/203.html:text/html}
 }
 
+@report{hermida_twittering_2010,
+	location = {Rochester, {NY}},
+	title = {Twittering the News: The Emergence of Ambient Journalism},
+	url = {http://papers.ssrn.com/abstract=1732598},
+	shorttitle = {Twittering the News},
+	abstract = {This paper examines new para-journalism forms such as micro-blogging as "awareness systems" that provide journalists with more complex ways of understanding and reporting on the subtleties of public communication. Traditional journalism defines fact as information and quotes from official sources, which have been identified as forming the vast majority of news and information content. This model of news is in flux, however, as new social media technologies such as Twitter facilitate the instant, online dissemination of short fragments of information from a variety of official and unofficial sources. This paper draws from computer science literature to suggest that these broad, asynchronous, lightweight and always-on systems are enabling citizens to maintain a mental model of news and events around them, giving rise to awareness systems that the paper describes as ambient journalism. The emergence of ambient journalism brought about by the use of these new digital delivery systems and evolving communications protocols raises significant research questions for journalism scholars and professionals. This research offers an initial exploration of the impact of awareness systems on journalism norms and practices. It suggests that one of the future directions for journalism may be to develop approaches and systems that help the public negotiate and regulate the flow of awareness information, facilitating the collection and transmission of news.},
+	number = {{ID} 1732598},
+	institution = {Social Science Research Network},
+	type = {{SSRN} Scholarly Paper},
+	author = {Hermida, Alfred},
+	urldate = {2015-03-15},
+	date = {2010-07-08},
+	keywords = {Awareness Systems, Internet, journalism, Micro-Blogging, social media, twitter},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/BUPI93M3/papers.html:text/html}
+}
+
 @article{dean_finding_1999,
 	title = {Finding related pages in the World Wide Web},
 	volume = {31},
@@ -1174,7 +1202,6 @@ We describe two algorithms to identify related Web pages. These algorithms use o
 	publisher = {Polity},
 	author = {Burke, Peter},
 	date = {2000-12},
-	note = {In this book Peter Burke adopts a socio-cultural approach to examine the changes in the organization of knowledge in Europe from the invention of printing to the publication of the French Encyclopedie. The book opens with an assessment of different sociologies of knowledge from Mannheim to Foucault and beyond, and goes on to discuss intellectuals as a social group and the social institutions (especially universities and academies) which encouraged or discouraged intellectual innovation. Then, in a series of separate chapters, Burke explores the geography, anthropology, politics and economics of knowledge, focusing on the role of cities, academies, states and markets in the process of gathering, classifying, spreading and sometimes concealing information. The final chapters deal with knowledge from the point of view of the individual reader, listener, viewer or consumer, including the problem of the reliability of knowledge discussed so vigorously in the seventeenth century. One of the most original features of this book is its discussion of knowledges in the plural. It centres on printed knowledge, especially academic knowledge, but it treats the history of the knowledge 'explosion' which followed the invention of printing and the discovery of the world beyond Europe as a process of exchange or negotiation between different knowledges, such as male and female, theoretical and practical, high-status and low-status, and European and non-European. Although written primarily as a contribution to social or socio-cultural history, this book will also be of interest to historians of science, sociologists, anthropologists, geographers and others in another age of information explosion. \#\#\# Review 'In Peter Burke's scholarly hands the notion of a social history of knowledge sheds its philosophical provocation and becomes judicious, prudent and historically rich. A beautifully written and accessible exercise in historical synthesis.' *Steven Shapin, author of "A Social History of Truth: Civility and Science in Seventeenth-Century England" (1994) and Professor of Sociology, University of California, San Diego* 'Peter Burke is an exceptional historian: a polyglot, at home in a dozen languages; an intellectual, who is well versed in theoretical developments adjacent to history; a superb expositor, with the capacity to distil his findings in unpretentious and limpidly accessible prose; and an author of unflagging vitality, whose prolific studies in the cultural history of early modern Europe and in modern historiography constitute a formidable *oeuvre *... He has succeeded in producing a balanced, judicious and highly stimulating work of synthesis. His book will be an indispensable starting point for years to come.' *Keith Thomas, History Today* 'Burke has made a significant contribution to cultural history ... [He] shows how knowledge was a form of exchange and how it became what we would recognize it as today. Burke's achievement in A Social History of Knowledge is to remind us that people in the past did not view knowledge in the same way as we do today.' *History* \#\#\# From the Back Cover In this book Peter Burke adopts a socio-cultural approach to examine the changes in the organization of knowledge in Europe from the invention of printing to the publication of the French *Encyclopédie*. The book opens with an assessment of different sociologies of knowledge from Mannheim to Foucault and beyond, and goes on to discuss intellectuals as a social group and the social institutions (especially universities and academies) which encouraged or discouraged intellectual innovation. Then, in a series of separate chapters, Burke explores the geography, anthropology, politics and economics of knowledge, focusing on the role of cities, academies, states and markets in the process of gathering, classifying, spreading and sometimes concealing information. The final chapters deal with knowledge from the point of view of the individual reader, listener, viewer or consumer, including the problem of the reliability of knowledge discussed so vigorously in the seventeenth century. One of the most original features of this book is its discussion of knowledges in the plural. It centres on printed knowledge, especially academic knowledge, but it treats the history of the knowledge 'explosion' which followed the invention of printing and the discovery of the world beyond Europe as a process of exchange or negotiation between different knowledges, such as male and female, theoretical and practical, high-status and low-status, and European and non-European. Although written primarily as a contribution to social or socio-cultural history, this book will also be of interest to historians of science, sociologists, anthropologists, geographers and others in another age of information explosion.},
 	keywords = {archives, info overload, renaissance},
 	file = {Attachment:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/BF4HVHPF/A Social History of Knowledge_ From Gutenb - Peter Burke.pdf:application/pdf}
 }
@@ -1321,6 +1348,16 @@ sharing on Twitter.},
 	author = {Friggeri, Adrien and Adamic, Lada and Eckles, Dean and Cheng, Justin},
 	urldate = {2014-05-01},
 	file = {document.pdf:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/C93QPXE7/document.pdf:application/pdf;Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/REX8MQ2Q/244240069095667.html:text/html}
+}
+
+@audio{gillespie_algorithms_????,
+	title = {Algorithms, and the Production of Calculated Publics},
+	url = {http://cmsw.mit.edu/podcast-tarleton-gillespie-algorithms-production-calculated-publics/},
+	shorttitle = {Podcast},
+	abstract = {Tarleton Gillespie: "Motivations behind the production of calculated publics highlight how algorithms are relevant to our efforts to know and be known."},
+	author = {Gillespie, Tarleton},
+	urldate = {2015-03-10},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/NT4A8G9Q/podcast-tarleton-gillespie-algorithms-production-calculated-publics.html:text/html}
 }
 
 @article{morozov_internet_2013,
@@ -1968,6 +2005,17 @@ Welsh, a graduate of the Missouri School of Journalism, presented at "Dodging th
 	date = {2014-11-12}
 }
 
+@online{holmes_how_2015,
+	title = {How Rap Genius and explainer sites are killing music journalism},
+	url = {http://pando.com/2015/01/20/how-rap-genius-and-explainer-sites-are-killing-music-journalism/},
+	abstract = {"{RapGenius}.com is white devil sophistry / Urban Dictionary is for demons with college degrees" - Kool {AD}, "Middle of the Cake" Last year, jazz critic and music historian Ted Gioia wrote a widely-re...},
+	titleaddon = {{PandoDaily}},
+	author = {Holmes, David},
+	urldate = {2015-03-16},
+	date = {2015-01-20},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/7JHQ7HZ5/how-rap-genius-and-explainer-sites-are-killing-music-journalism.html:text/html}
+}
+
 @online{_case_????,
 	title = {The Case Against Links},
 	url = {http://readwrite.com/2010/05/31/links_in_text},
@@ -2356,6 +2404,16 @@ The iconoclastic author says that he has grown sympathetic to the thinking of St
 	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/4BSR4394/why-link-out-four-journalistic-purposes-of-the-noble-hyperlink.html:text/html}
 }
 
+@online{_after_????,
+	title = {After the archive came down: The New Yorker’s revamped paywall is driving new readers and subscribers},
+	url = {http://www.niemanlab.org/2015/03/after-the-archive-came-down-the-new-yorkers-revamped-paywall-is-driving-new-readers-and-subscribers/},
+	shorttitle = {After the archive came down},
+	abstract = {Since relaunching {NewYorker}.com and revamping its paywall last year, both its web audience and its paying subscriber base have grown.},
+	titleaddon = {Nieman Lab},
+	urldate = {2015-03-11},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/U3XKDHF4/after-the-archive-came-down-the-new-yorkers-revamped-paywall-is-driving-new-readers-and-subscri.html:text/html}
+}
+
 @article{fish_interpreting_1976,
 	title = {Interpreting the "Variorum"},
 	volume = {2},
@@ -2388,7 +2446,6 @@ The iconoclastic author says that he has grown sympathetic to the thinking of St
 	publisher = {Macmillan},
 	author = {Weinberger, David},
 	date = {2008-04},
-	note = {“Perfectly placed to tell us what’s really new about [the] second-generation Web.”—*Los Angeles Times* Business visionary and bestselling author David Weinberger charts how as business, politics, science, and media move online, the rules of the physical world—in which everything has a place—are upended. In the digital world, everything has its places, with transformative effects: • Information is now a social asset and should be made public, for anyone to link, organize, and make more valuable. • There’s no such thing as “too much” information. More information gives people the hooks to find what they need. • Messiness is a digital virtue, leading to new ideas, efficiency, and social knowledge. • Authorities are less important than buddies. Rather than relying on businesses or reviews for product information, customers trust people like themselves. With the shift to digital music standing as the model for the future in virtually every industry, *Everything Is Miscellaneous* shows how anyone can reap rewards from the rise of digital knowledge. **},
 	keywords = {archives, classification, info overload},
 	file = {[David_Weinberger]_Everything_Is_Miscellaneous.pdf:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/MCQUUDCF/[David_Weinberger]_Everything_Is_Miscellaneous.pdf:application/pdf}
 }
@@ -3045,6 +3102,32 @@ More info on this event here: http://cyber.law.harvard.edu/events/2014/02/defend
 	note = {Professor Franco Moretti argues heretically that literature scholars should stop reading books and start counting, graphing, and mapping them instead. He insists that such a move could bring new luster to a tired field, one that in some respects is among “the most backwards disciplines in the academy.” Literary study, he argues, has been random and unsystematic. For any given period scholars focus on a select group of a mere few hundred texts: the canon. As a result, they have allowed a narrow distorting slice of history to pass for the total picture. Moretti offers bar charts, maps, and time lines instead, developing the idea of “distant reading,” set forth in his path-breaking essay “Conjectures on World Literature,” into a full-blown experiment in literary historiography, where the canon disappears into the larger literary system. Charting entire genres—the epistolary, the gothic, and the historical novel—as well as the literary output of countries such as Japan, Italy, Spain, and Nigeria, he shows how literary history looks significantly different from what is commonly supposed and how the concept of aesthetic form can be radically redefined. **},
 	keywords = {dh},
 	file = {Attachment:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/U94T2W69/Graphs, Maps, Trees_ Abstract Models for a - Franco Moretti.pdf:application/pdf}
+}
+
+@online{gahran_swimming_2008,
+	title = {Swimming Lessons for Journalists},
+	url = {http://www.pbs.org/idealab/2008/07/swimming-lessons-for-journalists005/},
+	titleaddon = {{PBS} Idea Lab},
+	author = {Gahran, Amy},
+	urldate = {2015-03-15},
+	date = {2008-07-04},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/BRABJ4K8/swimming-lessons-for-journalists005.html:text/html}
+}
+
+@article{zuckerman_international_2010,
+	title = {International reporting in the age of participatory media},
+	volume = {139},
+	issn = {0011-5266},
+	url = {http://dx.doi.org/10.1162/daed.2010.139.2.66},
+	doi = {10.1162/daed.2010.139.2.66},
+	pages = {66--75},
+	number = {2},
+	journaltitle = {Daedalus},
+	shortjournal = {Daedalus},
+	author = {Zuckerman, Ethan},
+	urldate = {2015-03-15},
+	date = {2010-04-01},
+	file = {Daedalus Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/888BV4ZI/daed.2010.139.2.html:text/html}
 }
 
 @book{bennett_vibrant_2009,
@@ -3798,6 +3881,18 @@ Mark Wilson, {CEO} and chairman, {TownNews}.com.},
 	file = {Attachment:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/6JRMAZTP/Radio Voices_ American Broadcasting, 1922- - Michele Hilmes.pdf:application/pdf}
 }
 
+@article{bennett_lindsay_1969,
+	title = {Lindsay Warned on School Budget},
+	url = {http://timesmachine.nytimes.com/timesmachine/1969/03/14/90065621.html},
+	shorttitle = {{TimesMachine}},
+	pages = {1,27},
+	journaltitle = {New York Times},
+	author = {Bennett, Charles G.},
+	urldate = {2015-03-16},
+	date = {1969-03-14},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/8BDM6PW4/90065621.html:text/html}
+}
+
 @article{peng_trends_1999,
 	title = {Trends in online newspapers: A look at the {US} web},
 	volume = {20},
@@ -4343,6 +4438,16 @@ Mark Wilson, {CEO} and chairman, {TownNews}.com.},
 	file = {Attachment:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/R5Q6829B/The Virtual Window - Anne Freidberg.pdf:application/pdf}
 }
 
+@online{lopez_everything_????,
+	title = {Everything you need to know about marijuana legalization},
+	url = {http://www.vox.com/cards/marijuana-legalization},
+	abstract = {Marijuana legalization would make it legal to smoke, eat, and otherwise consume marijuana for recreational and medical purposes.},
+	titleaddon = {Vox},
+	author = {Lopez, German},
+	urldate = {2015-03-15},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/G7H5HB7K/how-have-these-cards-changed.html:text/html}
+}
+
 @report{schoenberger_useful_2007,
 	location = {Cambridge, {MA}},
 	title = {Useful Void: The Art of Forgetting in the Age of Ubiquitous Computing},
@@ -4391,6 +4496,18 @@ Mark Wilson, {CEO} and chairman, {TownNews}.com.},
 	author = {Grafton, Anthony},
 	date = {1999},
 	keywords = {renaissance}
+}
+
+@online{debrouwere_taxonomies_2011,
+	title = {Taxonomies don't matter anymore},
+	url = {http://stdout.be/2011/12/19/taxonomies-dont-matter-anymore/},
+	titleaddon = {stdout.be},
+	type = {text},
+	author = {Debrouwere, Stijn},
+	urldate = {2015-03-10},
+	date = {2011-12-20},
+	langid = {american},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/EI22KGBE/taxonomies-dont-matter-anymore.html:text/html}
 }
 
 @online{_wired_????,
@@ -5351,6 +5468,18 @@ cites several people who have developed the idea of collective intelligence},
 	file = {Attachment:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/K3834JM6/The Language of New Media - Lev Manovich.pdf:application/pdf}
 }
 
+@book{gillmor_we_2006,
+	location = {Beijing ; Sebastopol, {CA}},
+	title = {We the Media: Grassroots Journalism By the People, For the People},
+	isbn = {9780596102272},
+	shorttitle = {We the Media},
+	abstract = {"We the Media, has become something of a bible for those who believe the online medium will change journalism for the better." -Financial Times Big Media has lost its monopoly on the news, thanks to the Internet. Now that it's possible to publish in real time to a worldwide audience, a new breed of grassroots journalists are taking the news into their own hands. Armed with laptops, cell phones, and digital cameras, these readers-turned-reporters are transforming the news from a lecture into a conversation. In We the Media, nationally acclaimed newspaper columnist and blogger Dan Gillmor tells the story of this emerging phenomenon and sheds light on this deep shift in how we make--and consume--the news. Gillmor shows how anyone can produce the news, using personal blogs, Internet chat groups, email, and a host of other tools. He sends a wake-up call tonewsmakers-politicians, business executives, celebrities-and the marketers and {PR} flacks who promote them. He explains how to successfully play by the rules of this new era and shift from "control" to "engagement." And he makes a strong case to his fell journalists that, in the face of a plethora of Internet-fueled news vehicles, they must change or become irrelevant. Journalism in the 21st century will be fundamentally different from the Big Media oligarchy that prevails today. We the Media casts light on the future of journalism, and invites us all to be part of it. Dan Gillmor is founder of Grassroots Media Inc., a project aimed at enabling grassroots journalism and expanding its reach. The company's first launch is Bayosphere.com, a site "of, by, and for the San Francisco Bay Area." Dan Gillmor is the founder of the Center for Citizen Media, a project to enable and expand reach of grassroots media. From 1994-2004, Gillmor was a columnist at the San Jose Mercury News, Silicon Valley's daily newspaper, and wrote a weblog for {SiliconValley}.com. He joined the Mercury News after six years with the Detroit Free Press. Before that, he was with the Kansas City Times and several newspapers in Vermont. He has won or shared in several regional and national journalism awards. Before becoming a journalist he played music professionally for seven years.},
+	pagetotal = {336},
+	publisher = {O'Reilly Media},
+	author = {Gillmor, Dan},
+	date = {2006-01-31}
+}
+
 @mvbook{jenkins_introduction:_100,
 	title = {Introduction: Golden Eras and Blind Spots–Genre, history and Comedy},
 	volume = {1},
@@ -6078,6 +6207,19 @@ smartphone screen, that can be sent anywhere?},
 	file = {1369118x%2E2013%2E873069.pdf:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/7SVHBZA4/1369118x%2E2013%2E873069.pdf:application/pdf;document (1).pdf:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/4WWI3U8K/document (1).pdf:application/pdf;Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/V89EK4NX/1369118X.2013.html:text/html}
 }
 
+@article{taylor_new_2014,
+	title = {New York Schools Chancellor Replaces 8 Superintendents},
+	issn = {0362-4331},
+	url = {http://www.nytimes.com/2014/10/22/nyregion/in-shake-up-new-york-schools-chief-changes-8-superintendents.html},
+	abstract = {The major personnel reshuffling was the first since Chancellor Carmen Fariña took over in January.},
+	journaltitle = {The New York Times},
+	author = {Taylor, Kate},
+	urldate = {2015-03-16},
+	date = {2014-10-21},
+	keywords = {Education Department ({NYC}), Education (K-12), Farina, Carmen, New York City, superintendents, Teachers and School Employees},
+	file = {New York Times Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/N34GBHHZ/in-shake-up-new-york-schools-chief-changes-8-superintendents.html:text/html}
+}
+
 @video{reynolds_journalism_institute_dodging_2014-3,
 	title = {Dodging the Memory Hole: Katherine Skinner},
 	url = {https://www.youtube.com/watch?v=Dx9SB4zA59s&feature=youtube_gdata_player},
@@ -6777,6 +6919,19 @@ should assess content type and language’s role in network structure.},
 	url = {http://m.smh.com.au/digital-life/digital-life-news/facebook-saves-everything-you-type--even-if-you-dont-publish-it-20131214-2zdk0.html},
 	urldate = {2013-12-16},
 	file = {Facebook saves everything you type - even if you don't publish it | smh.com.au:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/5Z9EBHSP/facebook-saves-everything-you-type--even-if-you-dont-publish-it-20131214-2zdk0.html:text/html}
+}
+
+@book{kovach_elements_2001,
+	title = {The Elements of Journalism: What Newspeople Should Know and the Public Should Expect},
+	isbn = {9780609504314},
+	shorttitle = {The Elements of Journalism},
+	abstract = {In July 1997, twenty-five of America's most influential journalists sat down to try and discover what had happened to their profession in the years between Watergate and Whitewater. What they knew was that the public no longer trusted the press as it once had. They were keenly aware of the pressures that advertisers and new technologies were putting on newsrooms around the country. But, more than anything, they were aware that readers, listeners, and viewers — the people who use the news — were turning away from it in droves. There were many reasons for the public's growing lack of trust. On television, there were the ads that looked like news shows and programs that presented gossip and press releases as if they were news. There were the "docudramas," television movies that were an uneasy blend of fact and fiction and which purported to show viewers how events had "really" happened. At newspapers and magazines, celebrity was replacing news, newsroom budgets were being slashed, and editors were pushing journalists for more "edge" and "attitude" in place of reporting. And, on the radio, powerful talk personalities led their listeners from sensation to sensation, from fact to fantasy, while deriding traditional journalism. Fact was blending with fiction, news with entertainment, journalism with rumor. Calling themselves the Committee of Concerned Journalists, the twenty-five determined to find how the news had found itself in this state. Drawn from the committee's years of intensive research, dozens of surveys of readers, listeners, viewers, editors, and journalists, and more than one hundred intensive interviews with journalists and editors, The Elements of Journalism is the first book ever to spell out — both for those who create and those who consume the news — the principles and responsibilities of journalism. Written by Bill Kovach and Tom Rosenstiel, two of the nation's preeminent press critics, this is one of the most provocative books about the role of information in society in more than a generation and one of the most important ever written about news. By offering in turn each of the principles that should govern reporting, Kovach and Rosenstiel show how some of the most common conceptions about the press, such as neutrality, fairness, and balance, are actually modern misconceptions. They also spell out how the news should be gathered, written, and reported even as they demonstrate why the First Amendment is on the brink of becoming a commercial right rather than something any American citizen can enjoy. The Elements of Journalism is already igniting a national dialogue on issues vital to us all. This book will be the starting point for discussions by journalists and members of the public about the nature of journalism and the access that we all enjoy to information for years to come. From the Hardcover edition.},
+	pagetotal = {264},
+	publisher = {Crown/Archetype},
+	author = {Kovach, Bill and Rosenstiel, Tom},
+	date = {2001-07-24},
+	langid = {english},
+	keywords = {Language Arts \& Disciplines / Journalism}
 }
 
 @article{miller_power_1998,
@@ -8036,12 +8191,14 @@ Lynch delivered the keynote address at Dodging the Memory Hole: Saving Born-Digi
 	file = {Attachment:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/R29E8GMI/Strange Sympathies_ Horizons of Media Theo - John Durham Peters.pdf:application/pdf}
 }
 
-@online{_ezra_????,
+@online{coscarelli_ezra_2014,
 	title = {Ezra Klein on Vox’s Launch, Media Condescension, and Competing With Wikipedia},
 	url = {http://nymag.com/daily/intelligencer/2014/04/ezra-klein-interview-vox-launch.html},
 	abstract = {The wonk king speaks in-depth about his new explanatory journalism site.},
-	titleaddon = {Daily Intelligencer},
+	titleaddon = {New York Magazine},
+	author = {Coscarelli, Joe},
 	urldate = {2015-01-29},
+	date = {2014-04-11},
 	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/FRWRAD3N/ezra-klein-interview-vox-launch.html:text/html}
 }
 
@@ -9303,6 +9460,16 @@ The hierarchical arrangement of knowledge (and the related assignment of power a
 	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/FRBKC9RB/u-s-news-deletes-content-published-before-2007.html:text/html}
 }
 
+@misc{_journalism_2001,
+	title = {Journalism Interactive: Survey Pinpoints a Sea Change in Attitudes and Practices; Engagement Defines New Era of Journalism},
+	url = {http://civicjournalism.org/about/pr_interact.html},
+	shorttitle = {Journalism Interactive},
+	publisher = {Pew Research Center},
+	urldate = {2015-03-16},
+	date = {2001-07-26},
+	file = {Selected Press Releases:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/Z4CCBJ52/pr_interact.html:text/html}
+}
+
 @mvbook{huron_sweet_2006,
 	title = {Sweet Anticipation: Music and the Psychology of Expectation},
 	volume = {1},
@@ -9313,6 +9480,16 @@ The hierarchical arrangement of knowledge (and the related assignment of power a
 	note = {Winner, 2007 Wallace Berry Award presented by the Society for Music Theory.The psychological theory of expectation that David Huron proposes in Sweet Anticipation grew out of the author's experimental efforts to understand how music evokes emotions. These efforts evolved into a general theory of expectation that will prove informative to readers interested in cognitive science and evolutionary psychology as well as those interested in music. The book describes a set of psychological mechanisms and illustrates how these mechanisms work in the case of music. All examples of notated music can be heard on the Web. Huron proposes that emotions evoked by expectation involve five functionally distinct response systems: reaction responses (which engage defensive reflexes); tension responses (where uncertainty leads to stress); prediction responses (which reward accurate prediction); imagination responses (which facilitate deferred gratification); and appraisal responses (which occur after conscious thought is engaged). For real-world events, these five response systems typically produce a complex mixture of feelings. The book identifies some of the aesthetic possibilities afforded by expectation, and shows how common musical devices (such as syncopation, cadence, meter, tonality, and climax) exploit the psychological opportunities. The theory also provides new insights into the physiological psychology of awe, laughter, and spine-tingling chills. Huron traces the psychology of expectations from the patterns of the physical/cultural world through imperfectly learned heuristics used to predict that world to the phenomenal qualia we experienced as we apprehend the world.},
 	keywords = {cognition, music},
 	file = {Attachment:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/FK3HAZ2H/Sweet Anticipation_ Music and the Psycholo - David Brian Huron.pdf:application/pdf}
+}
+
+@online{carr_iama_????,
+	title = {{IAmA} columnist and reporter on media and culture for the New York Times.},
+	url = {http://www.reddit.com/r/IAmA/comments/16k598/iama_columnist_and_reporter_on_media_and_culture/c7wt5ko},
+	abstract = {Gawker and others were all about that, but more and more I see them doing original work, some of which I end up citing. And more and more at our...},
+	titleaddon = {reddit},
+	author = {Carr, David},
+	urldate = {2015-03-15},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/KTCEHBHJ/c7wt5ko.html:text/html}
 }
 
 @mvbook{karnick_commitment_100,
@@ -9381,8 +9558,8 @@ The hierarchical arrangement of knowledge (and the related assignment of power a
 	file = {building-society-weaving-the-web.pdf:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/WHGRUB2P/building-society-weaving-the-web.pdf:application/pdf}
 }
 
-@online{rosen_pressthink:_2008,
-	title = {{PressThink}: National Explainer: A Job for Journalists on the Demand Side of News},
+@online{rosen_national_2008,
+	title = {National Explainer: A Job for Journalists on the Demand Side of News},
 	url = {http://archive.pressthink.org/2008/08/13/national_explain.html},
 	titleaddon = {{PressThink}},
 	author = {Rosen, Jay},
@@ -9401,6 +9578,19 @@ The hierarchical arrangement of knowledge (and the related assignment of power a
 	urldate = {2013-12-01},
 	date = {2013-07-31},
 	file = {The Atlantic Print View:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/294R6Q2F/278185.html:text/html;The Machine Zone_ This Is Where You Go When You Just Can't Stop Looking at Pictures on Facebook - Alexis C.pdf:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/NNBVD6IG/The Machine Zone_ This Is Where You Go When You Just Can't Stop Looking at Pictures on Facebook - Alexis C.pdf:application/pdf}
+}
+
+@book{schudson_discovering_1978,
+	location = {New York},
+	title = {Discovering the news: a social history of American newspapers},
+	shorttitle = {Discovering the news},
+	abstract = {This instructive and entertaining social history of American newspapers shows that the very idea of impartial, objective "news" was the social product of the democratization of political, economic, and social life in the nineteenth century. Professor Schudson analyzes the shifts in reportorial style over the years and explains why the belief among journalists and readers alike that newspapers must be objective still lives on.},
+	pagetotal = {248},
+	publisher = {Basic Books},
+	author = {Schudson, Michael},
+	date = {1978},
+	langid = {english},
+	keywords = {journalism, Journalism - Objectivity, Journalism - United States - History, Language Arts \& Disciplines / Journalism, Social Science / Popular Culture}
 }
 
 @article{granka_politics_2010,
@@ -9558,6 +9748,23 @@ The hierarchical arrangement of knowledge (and the related assignment of power a
 	author = {Ryfe, David},
 	date = {2012},
 	file = {ISOJ12.pdf:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/2EECJDVX/ISOJ12.pdf:application/pdf;Popularity is Not the Same Thing as Influence\: A Study of the Bay Area News System | Computer Networking Laboratory, CNL:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/X6SDH37J/192.html:text/html}
+}
+
+@online{_explainthis.org_2010,
+	title = {{ExplainThis}.org},
+	url = {https://web.archive.org/web/20100305205057/http://explainthis.org/},
+	type = {Internet Archive},
+	urldate = {2015-03-16},
+	date = {2010-03-05},
+	file = {Recent Questions | ExplainThis.org:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/UZ75IJXZ/explainthis.html:text/html}
+}
+
+@online{_new_????,
+	title = {New York Times Madison},
+	url = {http://madison.nytimes.com},
+	abstract = {Explore and help preserve vintage New York Times ads.},
+	urldate = {2015-03-16},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/WNHXQ6RG/madison.nytimes.com.html:text/html}
 }
 
 @online{wolfe_filing_2013,
