--- a/thesis.tex
+++ b/thesis.tex
@@ -47,7 +47,7 @@ process all files:}
 
 \begin{document}
 
-\include{front/cover}
+%\include{front/cover}
 % Some departments (e.g. 5) require an additional signature page.  See
 % signature.tex for more information and uncomment the following line if
 % applicable.
